Correctly set flycheck-elm

--- a/README.org
+++ b/README.org
@@ -10,3 +10,7 @@ The anaconda-mode uses ~jedi~ library to do completion.
 
 ** tern
 Run ~sudo npm install tern -g~. See [[http://ternjs.net/]] for more information about tern. We need tern for JavaScript completion. Note that tern do not work automatically, we need ~.tern-project~ file for setting in up.
+
+** elm-oracle
+elm-oracle is needed for elm-auto-completion.
+~npm install -g elm-oracle~
