--- a/README.org
+++ b/README.org
@@ -52,5 +52,6 @@ cargo install cargo-check
 rustup component add clippy-preview
 #+end_src
 
-
-
+** Yaml
+Install [[https://github.com/adrienverge/yamllint][yamllint]]
+~pip install yamllint~
