Adds org-roam support

--- a/README.org
+++ b/README.org
@@ -115,3 +115,9 @@ Install [[https://github.com/adrienverge/yamllint][yamllint]]
 
 Install [[https://github.com/redhat-developer/yaml-language-server][yaml-language-server]]
 npm install -g yaml-language-server
+
+** Org-mode
+*** Roam
+   The [[https://github.com/org-roam/org-roam][org-roam]] package requires =sqlite3= be located on =exec-path=. You also need to set up an additional variable ~(org-roam-directory "~/your/path/to/roam")~.
+
+   For a visual representation of the notes and their connections, =Graphviz= is required. You also need to setup org-protocol a by following [[https://www.orgroam.com/manual/Installation-_00281_0029.html][this instruction]].
