--- a/emacs.org
+++ b/emacs.org
@@ -86,6 +86,7 @@
 (require 'init-elm)
 (require 'init-ocaml)
 (require 'init-java)
+(require 'init-clojure)
 (require 'init-latex)
 (require 'init-yasnippet)
 #+end_src
